--- a/gallery/index.html
+++ b/gallery/index.html
@@ -72,7 +72,7 @@
         <!-- Page Heading/Breadcrumbs -->
         <div class="row">
             <div class="col-lg-12">
-                <h1 class="page-header">Gallery
+                <h1 class="page-header header_title">Gallery
                     <small>制作物</small>
                 </h1>
                 <ol class="breadcrumb">
@@ -94,7 +94,7 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header">Illustration
+                <h2 class="page-header gallery_title">Illustration
                     <small>制作物</small>
                 </h2>
             </div><!-- タイトル -->
@@ -102,16 +102,16 @@
 
         <!-- Projects Row -->
         <div class="row">
-            <div class="col-md-3 img-portfolio">
+            <div class="col-md-3 img-portfolio gallery_image">
                 <img class="pics img-responsive img-hover image-resize" src="http://placehold.it/750x450" data-glisse-big="http://placehold.it/750x450" alt="">
             </div>
-            <div class="col-md-3 img-portfolio">
+            <div class="col-md-3 img-portfolio gallery_image">
                 <img class="pics img-responsive img-hover image-resize" src="http://placehold.it/750x450" data-glisse-big="http://placehold.it/750x450" alt="">
             </div>
-            <div class="col-md-3 img-portfolio">
+            <div class="col-md-3 img-portfolio gallery_image">
                 <img class="pics img-responsive img-hover image-resize" src="http://placehold.it/750x450" data-glisse-big="http://placehold.it/750x450" alt="">
             </div>
-            <div class="col-md-3 img-portfolio">
+            <div class="col-md-3 img-portfolio gallery_image">
                 <img class="pics img-responsive img-hover image-resize" src="http://placehold.it/750x450" data-glisse-big="http://placehold.it/750x450" alt="">
             </div>
         </div>
@@ -119,7 +119,7 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header">Convenience store
+                <h2 class="page-header gallery_title">Convenience store
                     <small>POP制作</small>
                 </h2>
             </div><!-- タイトル -->
@@ -127,16 +127,16 @@
 
         <!-- Projects Row -->
         <div class="row">
-            <div class="col-md-3 img-portfolio">
+            <div class="col-md-3 img-portfolio gallery_image">
                 <img class="pics img-responsive img-hover image-resize" src="http://placehold.it/750x450" data-glisse-big="http://placehold.it/750x450" alt="">
             </div>
-            <div class="col-md-3 img-portfolio">
+            <div class="col-md-3 img-portfolio gallery_image">
                 <img class="pics img-responsive img-hover image-resize" src="http://placehold.it/750x450" data-glisse-big="http://placehold.it/750x450" alt="">
             </div>
-            <div class="col-md-3 img-portfolio">
+            <div class="col-md-3 img-portfolio gallery_image">
                 <img class="pics img-responsive img-hover image-resize" src="http://placehold.it/750x450" data-glisse-big="http://placehold.it/750x450" alt="">
             </div>
-            <div class="col-md-3 img-portfolio">
+            <div class="col-md-3 img-portfolio gallery_image">
                 <img class="pics img-responsive img-hover image-resize" src="http://placehold.it/750x450" data-glisse-big="http://placehold.it/750x450" alt="">
             </div>
         </div>
@@ -144,7 +144,7 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header">Drawing
+                <h2 class="page-header gallery_title">Drawing
                     <small>デッサン</small>
                 </h2>
             </div><!-- タイトル -->
@@ -152,16 +152,16 @@
 
         <!-- Projects Row -->
         <div class="row">
-            <div class="col-md-3 img-portfolio">
+            <div class="col-md-3 img-portfolio gallery_image">
                 <img class="pics img-responsive img-hover image-resize" src="http://placehold.it/750x450" data-glisse-big="http://placehold.it/750x450" alt="">
             </div>
-            <div class="col-md-3 img-portfolio">
+            <div class="col-md-3 img-portfolio gallery_image">
                 <img class="pics img-responsive img-hover image-resize" src="http://placehold.it/750x450" data-glisse-big="http://placehold.it/750x450" alt="">
             </div>
-            <div class="col-md-3 img-portfolio">
+            <div class="col-md-3 img-portfolio gallery_image">
                 <img class="pics img-responsive img-hover image-resize" src="http://placehold.it/750x450" data-glisse-big="http://placehold.it/750x450" alt="">
             </div>
-            <div class="col-md-3 img-portfolio">
+            <div class="col-md-3 img-portfolio gallery_image">
                 <img class="pics img-responsive img-hover image-resize" src="http://placehold.it/750x450" data-glisse-big="http://placehold.it/750x450" alt="">
             </div>
         </div>
